--- a/package.json
+++ b/package.json
@@ -34,8 +34,10 @@
         "cors": "^2.8.4",
         "express": "^4.17.1",
         "fs-extra": "^8.0.1",
+        "googleapis": "^40.0.0",
         "grpc": "^1.21.1",
         "helmet": "^3.18.0",
+        "ioredis": "^4.10.0",
         "jsonwebtoken": "^8.2.0",
         "lodash": "^4.17.11",
         "moment": "^2.21.0",
@@ -44,20 +46,24 @@
         "protobufjs": "^6.8.8",
         "request": "^2.88.0",
         "spdy": "^4.0.0",
-        "typescript": "^3.5.2"
+        "typescript": "^3.5.2",
+        "uuid": "^3.3.2"
     },
     "devDependencies": {
         "@types/bcryptjs": "^2.4.1",
         "@types/cors": "^2.8.3",
         "@types/express": "^4.17.0",
         "@types/fs-extra": "^7.0.0",
+        "@types/gapi": "0.0.36",
         "@types/helmet": "0.0.37",
+        "@types/ioredis": "^4.0.12",
         "@types/jest": "^24.0.15",
         "@types/jsonwebtoken": "^7.2.5",
         "@types/lodash": "^4.14.134",
         "@types/mongoose": "^5.5.6",
         "@types/morgan": "^1.7.35",
         "@types/spdy": "^3.4.4",
+        "@types/uuid": "^3.4.4",
         "husky": "1.3.1",
         "jest": "^24.8.0",
         "lint-staged": "8.1.3",
